<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowProductsListsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llName">

        <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/etNewName"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/nameHint"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/btnOkName"
            android:background="@drawable/button_corners"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:text="@string/btnOk"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductsLists"
        android:layout_width="match_parent"
        android:layout_below="@+id/llName"
        android:layout_height="600dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"></androidx.recyclerview.widget.RecyclerView>
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rvProductsLists"
        android:id="@+id/btnRename"
        android:text="@string/btnRename"
        android:background="@drawable/button_corners"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnRename"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddList"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/btnAddList"
            android:background="@drawable/button_corners"
            android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteList"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/btnDeleteList"
            android:background="@drawable/button_corners"
            android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</RelativeLayout>